
Given a version number MAJOR.MINOR.PATCH:

- MAJOR version when making incompatible API changes,
- MINOR version when adding functionality in a backwards compatible manner,
- PATCH version when making backwards compatible bug fixes.

== 4.0.0 (not released)
* Added support for disabled VCN DNS resolution with null vcn_dns_label variable

== 3.5.2 (October 7, 2022)
* Ignored lifecycle changes for defined_tags, freeform_tags

== 3.5.1 (September 5, 2022)
* removed DRG submodule, now promoted to terraform-oci-drg module (feat: )
* updated examples to use GitHub repo as source ()

== 3.4.0 (March 27, 2022)
* Replaced required provider hashicorp/oci --> oracle/oci 

== 3.3.0 (March 18, 2022)
* Added support for Defined Tags (fixes #73)
* Fixed route tables with drg destination (fixes #80)

== v3.2.0 (January 19, 2022)

=== New features
* Added Remote Peering Connection capability in DRG module (fixes #71)

== v3.1.0 (October 06, 2021)

=== New features
* Added IPv6 support for VCN (fixes #62)
* Added capability to attach multiple vcn to a drg using the new drg sub-module
* Added optional DNS activation on VCN. `var.vcn_dns_label` is now also validated to be alphanumeric string that begins with a letter (fixes #66)

=== Changes
* drg is refactored as an independent sub-module
* `var.vcn_name` is not a required input anymore for vcn module. Default value is set to `"vcn-module"`
* `var.vcn_dns_label` is not a required input anymore for vcn module. Default value is set to `"vcnmodule"`

=== Deprecation notice

Creating a DRG directly from vcn module with `var.create_drg` is deprecated. Previous features related to `var.create_drg` remains unchanged and works as expected before:

* DRG provisioning and attachment features are moving to their own sub-module as part of the "DRG refactor" effort (#46)
* Any new feature related to DRG will be handled into the new vcn sub-module: `module/drg`

== v3.0.0 (September 03, 2021)

=== Breaking changes